@@ -35,6 +35,7 @@ Verilator 5.001 devel
 * Support tristate select/extend (#3604). [Ryszard Rozak, Antmicro Ltd>
 * Support linting for top module interfaces (#3635). [Kanad Kanhere]
 * Add --dump-tree-dot to enable dumping Ast Tree .dot files (#3636). [Marcel Chang]
+* Add --get-supported to determine what features are in Verilator.
 * Add error on real edge event control.
 * Fix LSB error on --hierarchical submodules (#3539). [danbone]
 * Fix $display of fixed-width numbers (#3565). [Iztok Jeras]
